feat: maping ctrl-cmd-a to hyper-4 execpt apps

--- a/hammers/karabiner/mapping.org
+++ b/hammers/karabiner/mapping.org
@@ -125,7 +125,11 @@
                    {
                    "type": "frontmost_application_unless",
                    "bundle_identifiers": [
-                       "org.gnu.Emacs"
+                       "org.gnu.Emacs",
+                       "com.vmware.horizon",
+                       "com.parallels.desktop.console",
+                       "com.youqu.todesk.mac",
+                       "com.oray.sunlogin.macclient"
                    ]
                }
                ]
