--- a/hammers/scripts/tools.org
+++ b/hammers/scripts/tools.org
@@ -109,3 +109,9 @@
       echo ${result}
     #+END_SRC
 
+*** upload to sietium ftp
+    #+BEGIN_SRC shell :eval never :exports code :tangle (or (and (or (eq m/os 'macos) (eq m/os 'liunx)) (m/resolve "${m/home.d}/.local/bin/supload")) "no") :tangle-mode (identity #o755) :noweb yes
+      #!/bin/bash
+      curl --ftp-create-dirs -T $1 -u ftpuser ftp://10.10.10.10/neo/
+    #+END_SRC
+
